--- a/LocalyticsXamarin/LocalyticsXamarin.Android/LocalyticsXamarin.Android.csproj
+++ b/LocalyticsXamarin/LocalyticsXamarin.Android/LocalyticsXamarin.Android.csproj
@@ -88,5 +88,8 @@
     <PackageReference Include="NuGet.Build.Packaging">
       <Version>0.2.2</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.AndroidX.Legacy.Support.V4">
+      <Version>1.0.0</Version>
+    </PackageReference>
   </ItemGroup>
 </Project>
